--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=8000
 spring.data.rest.base-path=/api/v1
-spring.datasource.url=jdbc:h2:~/databasefile;AUTO_SERVER=TRUE
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/test4
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.datasource.username=jpaAdmin
+spring.datasource.password=Password12
 
 
